Converted report to md

--- a/credit_risk_report.ipynb
+++ b/credit_risk_report.ipynb
@@ -28,6 +28,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converted to markdown by: \n",
+    "# $ jupyter nbconvert --to Markdown credit_risk_report.ipynb"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -89,10 +99,6 @@
     "\n",
     "# Calculated the balanced accuracy score\n",
     "print(f\"The Balanced Accuracy Score is {balanced_accuracy_score(y_test, y_pred)*100:,.2f}%\")\n",
-    "\n",
-    "# cm_df = pd.DataFrame(\n",
-    "#     confusion_matrix(y_test, y_pred), index=[\"Actual High Risk\", \"Actual Low Risk\"], columns=[\"Predicted High Risk\", \"Predicted Low Risk\"])\n",
-    "# print(cm_df)\n",
     "\n",
     "# Display confusion matrix\n",
     "fig, ax = plt.subplots(figsize=(10, 8))\n",
